--- a/app/src/main/res/layout/activity_data.xml
+++ b/app/src/main/res/layout/activity_data.xml
@@ -10,34 +10,42 @@
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="89dp"
         android:layout_marginTop="104dp"
         android:layout_marginEnd="84dp"
         android:text="Где вы обучаетесь?"
         android:textColor="#FF9800"
         android:textSize="20dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/answer"
         android:layout_width="158dp"
         android:layout_height="54dp"
+        android:layout_marginStart="102dp"
         android:layout_marginTop="212dp"
         android:layout_marginEnd="100dp"
         android:text="Вести ответ"
         android:textSize="20dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/textViewResult"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="127dp"
         android:layout_marginTop="340dp"
         android:layout_marginEnd="120dp"
+        android:background="@drawable/border"
+        android:padding="5dp"
         android:text="Неизвестно"
         android:textColor="#FF9800"
         android:textSize="20dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
