--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -40,4 +40,14 @@
         android:name="com.example.thirdlab.ui.send.SendFragment"
         android:label="@string/menu_send"
         tools:layout="@layout/fragment_send" />
+    <fragment
+        android:id="@+id/browserFragment"
+        android:name="com.example.thirdlab.BrowserFragment"
+        android:label="Browser"
+        tools:layout="@layout/fragment_browser" />
+    <fragment
+        android:id="@+id/calculatorFragment"
+        android:name="com.example.thirdlab.CalculatorFragment"
+        android:label="Calculator"
+        tools:layout="@layout/fragment_calculator" />
 </navigation>
